<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:gravity="center_horizontal"
      android:layout_marginTop="16dp"
      android:text="@string/main_activity_title"
      android:textSize="28sp"
      android:textStyle="italic"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_centerVertical="true"
      android:padding="16dp"
      >
    <ImageView android:id="@+id/horizontalSnapImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_horizontal_swipe"
        android:layout_gravity="center_horizontal"
        />
    <TextView android:id="@+id/horizontalSnapTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horizontal_snap"
        android:textSize="26sp"
        android:gravity="center_horizontal"
        />
    <ImageView android:id="@+id/verticalSnapTopImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_vertical_swipe"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />
    <TextView android:id="@+id/verticalSnapTopTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vertical_snap_top"
        android:textSize="26sp"
        android:gravity="center_horizontal"
        />
    <ImageView android:id="@+id/verticalSnapBottomImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_vertical_swipe"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />
    <TextView android:id="@+id/verticalSnapBottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vertical_snap_bottom"
        android:textSize="26sp"
        android:gravity="center_horizontal"
        />
  </LinearLayout>

</RelativeLayout>
