<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:fillViewport="true"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:id="@+id/startSnapTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/start_snap_title"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        />
    <ProgressBar android:id="@+id/startSnapProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startSnapTitle"
        android:padding="4dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/candiesContainerStartSnap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startSnapTitle"
        android:padding="4dp"
        />

    <TextView
        android:id="@+id/centerSnapTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/candiesContainerStartSnap"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/center_snap_title"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        />
    <ProgressBar android:id="@+id/centerSnapProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerSnapTitle"
        android:padding="4dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/candiesContainerCenterSnap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerSnapTitle"
        android:padding="4dp"
        />

    <TextView
        android:id="@+id/endSnapTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/candiesContainerCenterSnap"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/end_snap_title"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        />
    <ProgressBar android:id="@+id/endSnapProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endSnapTitle"
        android:padding="4dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/candiesContainerEndSnap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endSnapTitle"
        android:padding="4dp"
        />
  </RelativeLayout>
</ScrollView>